Fix contrast on list copy items

--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -253,7 +253,7 @@
 }
 
 .wporg-meeting-calendar__list-event-copy {
-	color: #777;
+	color: #555D66;
 	font-weight: 200;
 	font-size: 14px !important;
 }
